syntax = "proto3";

// buf:lint:ignore PACKAGE_VERSION_SUFFIX
// buf:lint:ignore PACKAGE_DIRECTORY_MATCH
package io.nominal.scout.api.proto;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/nominal-io/nominal-streaming-go/proto";
option java_multiple_files = true;
option java_package = "io.nominal.scout.api.proto";

message WriteRequestNominal {
  repeated Series series = 1;
}

message Series {
  Channel channel = 1;

  map<string, string> tags = 2;

  Points points = 3;
}

message Channel {
  string name = 1;
}

message Points {
  oneof points_type {
    DoublePoints double_points = 1;
    StringPoints string_points = 2;
    IntegerPoints integer_points = 3;
  }
}

message DoublePoints {
  repeated DoublePoint points = 1;
}

message StringPoints {
  repeated StringPoint points = 1;
}

message IntegerPoints {
  repeated IntegerPoint points = 1;
}

message DoublePoint {
  google.protobuf.Timestamp timestamp = 1;
  double value = 2;
}

message StringPoint {
  google.protobuf.Timestamp timestamp = 1;
  string value = 2;
}

message IntegerPoint {
  google.protobuf.Timestamp timestamp = 1;
  int64 value = 2;
}
